--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snappthis</title>
 </head>
+
 <body>
-    
+    <nav>
+        Snappthis
+    </nav>
+    <main>
+        <h1>Welkom terug gebruiker</h1>
+        <section>
+            <h2>nieuwe in jouw groepen</h2>
+            <!-- voeg img toe -->
+        </section>
+        <section>
+            <h2>
+                ontdek nieuwe themas
+            </h2>
+            <!-- voeg img toe -->
+        </section>
+    </main>
 </body>
+
 </html>
