--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Snappthis</title>
 </head>
 
 <body>
     <nav>
-        Snappthis
+        <a class="logo" href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="47" height="48" fill="none">
+                <path fill="black" fill-rule="evenodd"
+                    d="M28.8 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm4.8 21.6a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm.6-22.9a2.7 2.7 0 0 0-.4 0 2.5 2.5 0 0 0-.4 0 1.7 1.7 0 0 0-1.5 1.2v14.6a1.7 1.7 0 1 0 3.4 0v-11c5.5 3.6 8.2 9.4 8.2 16.1a20 20 0 1 1-20-20 1.7 1.7 0 0 0 0-3.5A23.4 23.4 0 0 0 0 23.6a23.4 23.4 0 0 0 23.5 23.5A23.4 23.4 0 0 0 47 23.6 23.4 23.4 0 0 0 34.2 2.7ZM17.6 13.2c1.2-1 3-1.6 5.5-1.6s4.3.5 5.6 1.6a5.7 5.7 0 0 1 1.8 4.7v.4l-.3 1c-.4.5-1 .8-1.8.8s-1.4-.3-1.7-.9a2 2 0 0 1-.2-.9v-.8c0-1-.3-1.6-.8-2.1s-1.3-.8-2.5-.8-2 .3-2.5.8-.8 1.2-.8 2.1c0 .8.3 1.5.7 2 .5.6 1.2 1.2 2 1.7l2.4 1.6c1 .5 1.8 1 2.6 1.7.9.6 1.5 1.4 2 2.2.7.8 1 1.8 1 3 0 1.8-.7 3.3-2 4.4-1.2 1-3 1.6-5.6 1.6-2.5 0-4.3-.5-5.6-1.6a5.7 5.7 0 0 1-1.8-4.5v-1.3c0-.2 0-.6.2-.9.4-.6 1-1 1.8-1 .9 0 1.5.4 1.8 1 .2.3.2.7.2 1v1.4c0 1 .3 1.6.8 2.1s1.4.8 2.6.8c1.1 0 2-.3 2.5-.8s.8-1.2.8-2.1a3 3 0 0 0-.7-2 9.4 9.4 0 0 0-1.9-1.7 36 36 0 0 0-2.5-1.6c-1-.5-1.8-1-2.6-1.7a9.6 9.6 0 0 1-2-2.2c-.6-.8-.9-1.8-.9-3 0-1.8.7-3.3 1.9-4.4Z"
+                    clip-rule="evenodd" />
+            </svg>
+            <h1>Snappthis</h1>
+        </a>
+        <a href="">Zoeken</a>
+        <a href="">Groepen</a>
+        <a href="">Profiel</a>
+
     </nav>
     <main>
         <h1>Welkom terug gebruiker</h1>
         <section>
             <h2>nieuwe in jouw groepen</h2>
-            <!-- voeg img toe -->
+            <img src="assets/happy.png" alt="happy">
+            <img src="assets/happy.png" alt="happy">
+            <img src="assets/happy.png" alt="happy">
+
         </section>
         <section>
             <h2>
                 ontdek nieuwe themas
             </h2>
-            <!-- voeg img toe -->
+            <img src="assets/happy.png" alt="happy">
+            <img src="assets/happy.png" alt="happy">
+            <img src="assets/happy.png" alt="happy">
+
         </section>
     </main>
 </body>
